pdf aligning fixed

--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ font-size: large;
     padding: 15px; 
 padding-bottom: 30px;
 	border-radius: 10px;
-margin-left: 200px;
+margin-left: 13%;/*200px;*/
 background-size: cover;
 }
 #walskkd{
@@ -147,7 +147,7 @@ font-size: large;
     padding: 15px; 
 padding-bottom: 50px;
 	border-radius: 10px;
-margin-left: 200px;
+margin-left: 13%;/*200px;*/
 background-size: cover;
 }
 #wals2{
@@ -160,6 +160,7 @@ font-size: large;
 padding-bottom: 30px;
 	border-radius: 10px;
 margin: 20px;
+/*margin-left: 7%;200px;*/
 background-size: cover;
 }
 #menu {
